--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #fff;
-        color: #2c2c2c;
+        background-color: #fbf3db;
+        color: #37352f;
         font-family: "Poppins", "Arial", sans-serif;
         margin: 0;
       }
@@ -23,6 +23,7 @@
       #timer {
         font-size: 3rem;
         margin-top: 1rem;
+        font-weight: bold;
       }
     </style>
   </head>
