--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         margin-top: 1rem;
         font-weight: bold;
       }
+
+      #timer span {
+  display: inline-block;
+  min-width: 2rem;
+  transition: all 0.05s ease;
+}
     </style>
   </head>
   <body>
